<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Centrium Events</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_events">Events</string>
    <string name="title_chat">Chat</string>
    <string name="title_account_info">Account Info</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="updateAccount">Update</string>
    <string name="createAccount">Create</string>
    <string name="createId">ID</string>

    <string name="accountPhoneNumber">Phone Number</string>
    <string name="accountEmail">Email</string>
    <string name="accountName">Full Name</string>
    <string name="accountNumber">Account Number</string>

    <string name="title_activity_base">BaseActivity</string>
    <string name="navdrawer_item_calendar">Calendar</string>
    <string name="navdrawer_item_event">Event</string>
    <string name="navdrawer_item_chat">Chat</string>
    <string name="navdrawer_item_account_info">Account Info</string>
    <string name="navdrawer_create_account">Create Account</string>
    <string name="navdrawer_create_team">Create Team</string>
    <string name="navdrawer_create_event">Create Event</string>
    <string name="navdrawer_logout">Logout</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_account_info">AccountInfoActivity</string>

    <string name="account_personal_info">Account Information</string>
    <string name ="create_account">Create Account</string>
    <string name="system_generated">[System Generated]</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_role">Select Role:</string>
    <string name="title_activity_create_team">CreateTeamActivity</string>
    <string name="title_activity_calender_view">CalenderViewActivity</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_calendar_view">CalendarViewActivity</string>
    <string name="title_activity_view_event">ViewEventActivity</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_splash">SplashActivity</string>


</resources>
